--- a/ReadME
+++ b/ReadME
@@ -7,3 +7,5 @@
 * With the information recieved the calculator will be able to determind from the following groups you
 will be placed in.
 
+*Slighty Underweight-Normal Weight-Slightly Overweight-Overweight
+
