--- a/ReadME
+++ b/ReadME
@@ -9,3 +9,5 @@ will be placed in.
 
 *Slighty Underweight-Normal Weight-Slightly Overweight-Overweight
 
+* I've also added images so you can see a preview how it looks like and runs in the termianal.
+
