--- a/ReadME
+++ b/ReadME
@@ -9,5 +9,7 @@ will be placed in.
 
 *Slighty Underweight-Normal Weight-Slightly Overweight-Overweight
 
+Language used: C# 
+
 * I've also added images so you can see a preview how it looks like and runs in the termianal.
 
