--- a/ReadME
+++ b/ReadME
@@ -13,5 +13,5 @@ Language used: C#
 
 * I've also added images so you can see a preview how it looks like and runs in the termianal.
 
-*If you have any questions, please feel free to reach out to me via Email.
+*If you have any questions, please feel free to reach out to me via E-Mail: irj082024@gmail.com 📩
 
